feat: add response api endpoints
